fix: make input height 24px everywhere, align search and extensions input

--- a/static/css/parts/InputBox.css
+++ b/static/css/parts/InputBox.css
@@ -9,6 +9,7 @@
   padding: 4px;
   color: var(--InputBoxForeground);
   font-size: 13px;
+  height: 24px;
   contain: strict;
 }
 
